--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 <html>
+<script src="https://cdn.jsdelivr.net/npm/tify@0.28.1/dist/tify.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tify@0.28.1/dist/tify.css">
+  <script>
+new Tify({
+  container: '#tify',
+  manifestUrl: 'https://example.org/iiif-manifest.json',
+})
+</script>
+  
+  <div id="tify" style="height: 640px"></div>
 
-<p>Checking that this is working</p>
+  
+  
 
 </html>
