--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <div id="tify" style="height: 640px"></div>
   
   <script>
-new Tify({
+const Tify({
   container: '#tify',
-  manifestUrl: 'https://example.org/iiif-manifest.json',
+  manifestUrl: 'https://manifests.sub.uni-goettingen.de/iiif/presentation/PPN857449303/manifest',
+  pageLabelFormat: 'P',
+  urlQueryKey: 'tify',
 })
 </script>
-  
 
-<p>update check</p>
-  
+<p></p>  
   
 
 </html>
