--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <div id="tify" style="height: 640px"></div>
   
   <script>
-const Tify({
+new Tify({
   container: '#tify',
   manifestUrl: 'https://manifests.sub.uni-goettingen.de/iiif/presentation/PPN857449303/manifest',
   pageLabelFormat: 'P',
@@ -13,7 +13,7 @@ const Tify({
 })
 </script>
 
-<p></p>  
+<p>update check</p>  
   
 
 </html>
