--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@ new Tify({
   container: '#tify',
   manifestUrl: 'https://manifests.sub.uni-goettingen.de/iiif/presentation/PPN857449303/manifest',
   pageLabelFormat: 'P',
-  urlQueryKey: 'tify',
+  urlQueryKey: 'manifest',
 })
 </script>
 
-<p>update check</p>  
+<p>update</p>  
   
 
 </html>
